uploading work completed

--- a/Practicals/01-statistics-exercises.ipynb
+++ b/Practicals/01-statistics-exercises.ipynb
@@ -354,25 +354,359 @@
    "source": []
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "e30b7066",
+   "cell_type": "markdown",
+   "id": "1f6fc19f",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "<h3 style=\"color: #001a79;\">Exercise 2.1</h3>\n",
+    "\n",
+    "<hr style=\"border-top: 1px solid #001a79;\" />\n",
+    "\n",
+    "Add info for the following: https://docs.scipy.org/doc/scipy/reference/generated/scipy.stats.ttest_ind.html\n",
+    "\n",
+    "T-test: This is a test for the null hypothesis that 2 independent samples have identical average (expected) values. This test assumes that the populations have identical variances by default.\n",
+    "The t-test can be used, for example, to determine if the means of two sets of data are significantly different from each other.\n",
+    "A null hypothesis is a type of statistical hypothesis that proposes that no statistical significance exists in a set of given observations.\n",
+    "A p-value larger than a chosen threshold (e.g. 5% or 1%) indicates that our observation is not so unlikely to have occurred by chance.\n",
+    "A p-value less than 0.05 (typically ≤ 0.05) is statistically significant."
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "6fc41c7e",
    "metadata": {},
    "outputs": [],
+   "source": [
+    "from scipy import stats\n",
+    "import numpy as np\n",
+    "\n",
+    "rng = np.random.default_rng()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "2afab5a7",
+   "metadata": {},
+   "source": [
+    "Testing samples with the exact same means"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "id": "c0b83e64",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Ttest_indResult(statistic=-0.09173574446694908, pvalue=0.9269264348490781)"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "rvs1 = stats.norm.rvs(loc=5, scale=10, size=500, random_state=rng) # loc = mean in the normal distribution , scale = standard deviation , and using random number generator\n",
+    "rvs2 = stats.norm.rvs(loc=5, scale=10, size=500, random_state=rng) # rng = peseudo-random number generator. Basically not exactly random \n",
+    "stats.ttest_ind(rvs1, rvs2)\n",
+    "stats.ttest_ind(rvs1, rvs2, equal_var=False) # perform a standard independent 2 sample test that assumes equal population variances. If False, perform Welch’s t-test, which does not assume equal population variance"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "bba131e0",
+   "metadata": {},
+   "source": [
+    "A larger t-value shows that the difference between group means is greater than the pooled standard error, indicating a more significant difference between the groups. Note that it’s negative; this is fine! In most cases, we only care about the absolute value of the difference, or the distance from 0. It doesn’t matter which direction."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "3fd118b1",
+   "metadata": {},
+   "source": [
+    "ttest_ind underestimates p for unequal variances:\n",
+    "*The unequal variance t-test is an independent t-test and is used when the number of samples in each group is different, and the variance of the two data sets is also different. This test is also called Welch's t-test.*"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "id": "48d0d541",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Ttest_indResult(statistic=-1.2793338994319923, pvalue=0.20117420544915746)"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "rvs3 = stats.norm.rvs(loc=5, scale=20, size=500, random_state=rng)\n",
+    "stats.ttest_ind(rvs1, rvs3)\n",
+    "stats.ttest_ind(rvs1, rvs3, equal_var=False)\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "60b6fb7e",
+   "metadata": {},
+   "source": [
+    "When n1 != n2 (size of the sample set), the equal variance t-statistic is no longer equal to the unequal variance t-statistic:\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "id": "18674094",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Ttest_indResult(statistic=-1.9725573881035823, pvalue=0.049006252874430674)"
+      ]
+     },
+     "execution_count": 26,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "rvs4 = stats.norm.rvs(loc=5, scale=20, size=100, random_state=rng) # size of rsv4 is 1/4 that of declared variables\n",
+    "stats.ttest_ind(rvs1, rvs4)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "ea5c289d",
+   "metadata": {},
+   "source": [
+    "Now setting equal variance to False:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "id": "e1e64e9a",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Ttest_indResult(statistic=0.25278032129039985, pvalue=0.8009125854575454)"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "stats.ttest_ind(rvs1, rvs4, equal_var=False)\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "3fb26969",
+   "metadata": {},
+   "source": [
+    "T-test with different means, variance, and n:\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "id": "fbb630bd",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Ttest_indResult(statistic=-4.7579432101255605, pvalue=2.454779343440806e-06)"
+      ]
+     },
+     "execution_count": 27,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "rvs5 = stats.norm.rvs(loc=8, scale=20, size=100, random_state=rng)\n",
+    "stats.ttest_ind(rvs1, rvs5)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "71f8bef1",
+   "metadata": {},
+   "source": [
+    "Now setting equal variance to False"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "id": "465ed261",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Ttest_indResult(statistic=-3.277157572462146, pvalue=0.0013989083258070753)"
+      ]
+     },
+     "execution_count": 28,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "stats.ttest_ind(rvs1, rvs5, equal_var=False)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "fc7220ba",
+   "metadata": {},
+   "source": [
+    "When performing a permutation test, more permutations typically yields more accurate results. Use a np.random.Generator to ensure reproducibility:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
+   "id": "45a3d090",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Ttest_indResult(statistic=-4.7579432101255605, pvalue=0.0)"
+      ]
+     },
+     "execution_count": 39,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "stats.ttest_ind(rvs1, rvs5, permutations=10, random_state=rng)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
+   "id": "f8dc00fd",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Take these two samples, one of which has an extreme tail.\n",
+    "\n",
+    "a = (56, 128.6, 12, 123.8, 64.34, 78, 763.3)\n",
+    "b = (1.1, 2.9, 4.2)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "9ad9e28d",
+   "metadata": {},
+   "source": [
+    "Use the trim keyword to perform a trimmed (Yuen) t-test. For example, using 20% trimming, trim=.2, the test will reduce the impact of one (np.floor(trim *len(a))) element from each tail of sample a. It will have no effect on sample b because np.floor(trim*len(b)) is 0."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "id": "76ed759d",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Ttest_indResult(statistic=3.4463884028073513, pvalue=0.01369338726499547)"
+      ]
+     },
+     "execution_count": 32,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "stats.ttest_ind(a, b, trim=.2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "dc076c4b",
+   "metadata": {},
+   "outputs": [],
    "source": []
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ba127670",
+   "id": "935bfb59",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "c442b248",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "0bdfa5a8",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "677f3e43",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "01be873f",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "affc2bf0",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "ac01c1ee",
    "metadata": {},
    "outputs": [],
    "source": []
