finishing README with links to NBViewer and Binder working

--- a/05-evaluation.ipynb
+++ b/05-evaluation.ipynb
@@ -1,12 +1,14 @@
 {
  "cells": [
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
     "<h1>Machine Learning and Statistics</h1>\n",
     "<h2>Evaluation of Keras Timeseries Anomaly Detection Notebook </h2>\n",
     "<h3>Conor McCaffrey, G00286552</h3>\n",
+    "\n",
     "\n",
     "https://keras.io/examples/timeseries/timeseries_anomaly_detection/"
    ]
