spell check of evaluation.ipynb

--- a/05-evaluation.ipynb
+++ b/05-evaluation.ipynb
@@ -9,7 +9,7 @@
     "<h2>Evaluation of Keras Timeseries Anomaly Detection Notebook </h2>\n",
     "<h3>Conor McCaffrey, G00286552</h3>\n",
     "\n",
-    "\n",
+    "Link to Keras documentation: \n",
     "https://keras.io/examples/timeseries/timeseries_anomaly_detection/"
    ]
   },
